# Visualization

./: .gitignore  Manifest.toml  README.md  clean_data.csv  cluster.ipynb  init-env.sh  install-packages.r  leger.html  leger.qmd  mes_donnees_clusters.csv  peggy.ipynb  play_API.ipynb  pyproject.toml  quarto1.html  quarto1.qmd  quarto_R.html  quarto_R.qmd  quebec.csv  requirements.txt  test_clustering_vars_only.csv  test_fixed.csv  test_with_all_columns.csv  villes.csv
.github/workflows/: devcontainer.yml
devcontainer-template/: pyproject.toml
peggy/data/: Peggy_descriptive_data.ccsv  Peggy_descriptive_data.csv  Peggy_descriptive_data_2025-08-07.csv  analyse.qmd  anayse_peggy.qmd  clean_data.csv  clean_data_2025-08-05.csv  cleaning.qmd  find_rules_2025-08-05.csv  peggy.csv  peggy_clean.csv  raw_peggy_DONNEES_ILP.csv
peggy/data/results/: Peggy_descriptive_data_2025-08-07.csv
